Update complet et css manque responsive

--- a/css/tdl.css
+++ b/css/tdl.css
@@ -69,7 +69,7 @@ h2{
     text-align: center;
     padding: 5px;
     margin-top: 20%;
-    background-color: red;
+    background-color: lightblue;
 }
 
 
