--- a/css/tdl.css
+++ b/css/tdl.css
@@ -72,8 +72,6 @@ h2{
     background-color: lightblue;
 }
 
-
-
 #showTodo td {
     width: 20%;
     text-align: center;
@@ -91,3 +89,42 @@ h2{
 
 
 
+@media all and (max-width: 680px){
+
+    #showTodo{
+        width: 100%;    
+        font-size: small;
+        text-align: center;
+        padding: 5px;
+        margin-top: 20%;
+        background-color: lightblue;
+    }
+    
+    
+    
+    #showTodo td {
+        text-align: center;
+        padding: 8px;
+        border: solid white;
+        
+        
+    }
+
+    .addUpdateForm{
+        background-color: #F5D1D1;
+        width: 60%;
+        margin: 0 auto;
+        margin-top: 12%;
+        text-align: center; 
+        padding: 20px;
+    }
+
+    .addUpdateForm input{
+
+        display: block;
+        margin:  auto;
+    }
+    
+
+
+}
